crate/src/lexer/snapshots/tests__lexer::tests::lex_curlies.snap
---
created: "2019-07-08T18:41:37.170854Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: LCurly,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0,
                },
                end: Pos {
                    line: 0,
                    column: 1,
                },
            },
        },
        Token {
            token_type: RCurly,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 1,
                },
                end: Pos {
                    line: 0,
                    column: 2,
                },
            },
        },
    ],
)
