crate/src/lexer/snapshots/tests__lexer::tests::lex_float.snap
---
created: "2019-06-25T20:05:13.203580Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: Number(
                10.123
            ),
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0
                },
                end: Pos {
                    line: 0,
                    column: 6
                }
            }
        }
    ]
)
