crate/src/lexer/snapshots/tests__lexer::tests::lex_multiline_string.snap
---
created: "2019-07-14T02:39:18.232671Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: String(
                "\nhello",
            ),
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0,
                },
                end: Pos {
                    line: 1,
                    column: 6,
                },
            },
        },
    ],
)
