crate/src/lexer/snapshots/tests__lexer::tests::lex_operators.snap
---
created: "2019-07-08T18:41:37.171020Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: Times,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0,
                },
                end: Pos {
                    line: 0,
                    column: 1,
                },
            },
        },
        Token {
            token_type: Divide,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 1,
                },
                end: Pos {
                    line: 0,
                    column: 2,
                },
            },
        },
        Token {
            token_type: Plus,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 2,
                },
                end: Pos {
                    line: 0,
                    column: 3,
                },
            },
        },
        Token {
            token_type: Minus,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 3,
                },
                end: Pos {
                    line: 0,
                    column: 4,
                },
            },
        },
        Token {
            token_type: Compare,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 5,
                },
                end: Pos {
                    line: 0,
                    column: 6,
                },
            },
        },
        Token {
            token_type: Equals,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 6,
                },
                end: Pos {
                    line: 0,
                    column: 7,
                },
            },
        },
    ],
)
