crate/src/lexer/snapshots/tests__lexer::tests::lex_special.snap
---
created: "2019-06-25T20:05:13.203727Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: Colon,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0
                },
                end: Pos {
                    line: 0,
                    column: 1
                }
            }
        },
        Token {
            token_type: Comma,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 1
                },
                end: Pos {
                    line: 0,
                    column: 2
                }
            }
        }
    ]
)
