crate/src/lexer/snapshots/tests__lexer::tests::lex_string.snap
---
created: "2019-07-08T18:41:37.170827Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: String(
                "hello",
            ),
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0,
                },
                end: Pos {
                    line: 0,
                    column: 7,
                },
            },
        },
    ],
)
